fix: reduce z-index to stay below menu items

--- a/src/app/overlay.component.scss
+++ b/src/app/overlay.component.scss
@@ -31,7 +31,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(245, 245, 245, 0.7);
-  z-index: 1000;
+  z-index: 300;
   text-align: center;
   display: flex;
   align-items: center;
